--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "pagination",
+    "name": "page",
     "version": "1.0.0",
     "devDependencies": {
         "grunt-contrib-uglify": "~0.2.0",
